@@ -155,12 +155,18 @@ AC_SUBST(TEXI2DVICMD)
 AC_PATH_PROGS(KPSEWHICH, [${KPSEWHICH} kpsewhich], "")
 r_rd4pdf="times,inconsolata,hyper"
 if test -n "${KPSEWHICH}"; then
-  if test -z `${KPSEWHICH} inconsolata.sty`; then
-     r_rd4pdf="times,hyper"
-     if test -z "${R_RD4PDF}" ;  then
-       warn_pdf3="inconsolata.sty not found: PDF vignettes and package manuals will not be rendered optimally"
-       AC_MSG_WARN([${warn_pdf3}])
-     fi
+  ${KPSEWHICH} zi4.sty
+  if test $? -eq 0; then
+     r_rd4pdf="times,zi4,hyper"
+  else
+    ${KPSEWHICH} inconsolata.sty
+    if test $? -ne 0; then
+       r_rd4pdf="times,hyper"
+       if test -z "${R_RD4PDF}" ;  then
+         warn_pdf3="neither inconsolata.sty nor zi4.sty found: PDF vignettes and package manuals will not be rendered optimally"
+         AC_MSG_WARN([${warn_pdf3}])
+       fi
+    fi
   fi
 fi
 : ${R_RD4PDF=${r_rd4pdf}}
